# chat_reflection_loop

./: .clinerules  .clinerules-architect  .clinerules-code  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.sample  .gitignore  Dockerfile  README.md  api.py  compose.yaml  pyproject.toml
backend/agents/: base.py  llm_schemas.py  models.py  pattern_analysis_engine.py  pattern_analyzer.py  profile_agent.py  reflection.py
backend/repositories/: reflection_repository.py  user_profile_repository.py
backend/tests/: conftest.py  test_profile_agent.py  test_profile_api.py  test_reflection_api.py
docs/: api_definition.md  apigee_migration_challenges.md  apigee_migration_steps.md  cloud_run_firebase_auth.md  cors_authentication_fix.md  develop_vertexai_auth.md  development_preparation.md  firebase_flutter_genai_architecture.md  github_project_view_settings.md  hackathon_entry_zenn.md  implementation_challenges.md  initial_design_note.md  redeploy_backend_summary.md  sse_support_in_gcp_api_gateway.md  task_management_guide.md  vertex_ai_permissions.md
frontend/: .gitignore  README.md
frontend/flutter_web_app/: .env.sample  .gitignore  firebase.json  package-lock.json  package.json  pubspec.yaml  test_web_app.sh
iac/: README.md
iac/terraform/: .gitignore  main.tf  openapi.yaml  terraform.tfvars.example  variables.tf
mcps/docs/: implementation_challenges.md
mcps/github-api-server/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: .env.sample  .gitignore  get-firebase-jwt.js
(+43 files in other folders)
